# sunset-reveries

./: .gitignore  CMakeLists.txt  README.md
assets/data/: physics.data  player.data
gaemi/: AssetsManager.cpp  AssetsManager.h  AssetsManager.hpp  CMakeLists.txt  Defines.h  Defines.hpp  Engine.cpp  Engine.h  Engine.hpp  GMath.cpp  GMath.h  GMath.hpp  IGame.h  IGame.hpp  ImRenderer.cpp  ImRenderer.h  Jobs.cpp  Jobs.hpp  Log.cpp  Log.h  Log.hpp  LogLevel.h  PlatformUtils.cpp  PlatformUtils.h  PlatformUtils.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Window.cpp  Window.h  Window.hpp
gcausality/: CMakeLists.txt  Causality.cpp  Causality.hpp  Law.cpp  Law.hpp  WorldState.hpp  WorldStateManager.cpp  WorldStateManager.hpp
gecs/: Archetype.cpp  Archetype.hpp  CMakeLists.txt  Column.cpp  Column.hpp  Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  Query.cpp  Query.hpp  QueryCache.cpp  QueryCache.hpp  QueryManager.cpp  QueryManager.hpp  Types.cpp  Types.hpp  World.cpp  World.hpp
gfile/: CMakeLists.txt  File.cpp  File.hpp  FileTypes.cpp  FileTypes.hpp
glog/: CMakeLists.txt  Log.cpp  Log.hpp  LogLevel.hpp
gmath/: CMakeLists.txt  GMath.cpp  GMath.hpp  Ray2D.cpp  Ray2D.hpp  Rect.cpp  Rect.hpp  Types.hpp  Vec2.cpp  Vec2.hpp
gplatform/: Asserts.hpp  CMakeLists.txt  Calendar.hpp  ConsoleLine.hpp  Defines.hpp  StringUtils.hpp  TupleUtils.hpp
gplatform/linux/: Calendar.cpp  ConsoleLine.cpp  StringUtils.cpp
gplatform/win/: Calendar.cpp  ConsoleLine.cpp  StringUtils.cpp
sunset/: CMakeLists.txt  Components.cpp  Components.h  Components.hpp  ECSManager.cpp  ECSManager.h  ECSManager.hpp  Entity.cpp  Entity.h  Entity.hpp  EntityRingBuffer.cpp  EntityRingBuffer.hpp  Game.cpp  Game.h  Game.hpp  IScene.h  IScene.hpp  SceneGame.cpp  SceneGame.h  SceneGame.hpp  WorldChange.h  WorldChange.hpp  WorldChanger.cpp  WorldChanger.hpp  WorldState.h  WorldState.hpp  WorldStateManager.cpp  WorldStateManager.hpp  main.cpp
testbed/: CMakeLists.txt  Game.cpp  Game.hpp  SceneGame.cpp  SceneGame.hpp  main.cpp
